--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -11,6 +11,7 @@
 .imageCard{
     -webkit-transition: all 350ms ease;
     transition: all 350ms ease;
+    animation: leave .8s linear;
     cursor: pointer;
     margin-bottom: 12px;
     outline: 1px solid rgba(255, 255, 255, 0.6);
@@ -19,7 +20,6 @@
 
 .image{
     width: 100%;
-    
 }
 
 .imageCard:hover{
@@ -43,5 +43,16 @@
         -webkit-column-width: 100%;
         -moz-column-width: 100%;
         column-width: 100%;
+    }
+}
+
+@keyframes leave{
+    0%{
+        transform: scale(0.3);
+        -webkit-transform: scale(0.3);
+    }
+    100%{
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
     }
 }
